<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:background="@drawable/fundo" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_a_senha"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10.54"
            android:ems="10"
            android:hint="@string/login_field"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usp_br"
            android:textSize="19sp" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/Senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nova_senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repetir_senha"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/voltar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="onClick"
            android:background="@drawable/botao"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/botao"
            android:text="@string/enviar" />
    </LinearLayout>

</LinearLayout>