<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/fundo">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|right|top"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="152dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="34sp" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <EditText
	        android:id="@+id/login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="10.54"
	        android:ems="10"
	        android:hint="@string/login_field"
	        android:inputType="textEmailAddress" />
	
	    <TextView
	        android:id="@+id/TextView02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/usp_br"
	        android:textSize="19sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:hint="@string/password_field"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dar_carona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:onClick="onClick"
            android:text="@string/dar_carona" />

        <Button
            android:id="@+id/receber_carona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:onClick="onClick"
            android:text="@string/receber_carona" />
    </LinearLayout>

    <Button
        android:id="@+id/cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botao"
        android:onClick="onClick"
        android:text="@string/cadastro" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />
</LinearLayout>

</ScrollView>