<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:gravity="right"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selecionar_rota"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@id/voltar"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.67"
            android:background="@drawable/botao"
            android:onClick="onClick"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/confirmar"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:onClick="onClick"
            android:text="@string/confirmar" />
    </LinearLayout>

</LinearLayout>